--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <meta name="author" content="Taylor Gibbs">
   <meta property="og:site" content="https://taylorgibbs.dev"> 
-  <meta property="og:url" content="https://taylorgibbs.dev"> 
+  <meta property="og:url" content="https://taylorgibbs.dev"> test
   <meta property="og:type" content="Website">
   <meta property="og:site_name" content="TaylorGibbs.dev">
   <meta property="og:image" content="https://taylorgibbs.dev/assets/img/taylorlogo.png">
