--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Taylor Gibbs</h1>
-      <p>I'm <span class="typed" data-typed-items="a Managing Director, a Board of Director, a Company Director, a Support Agent, a Developer, a Team Leader, a Supervisor, a Childcare Practitioner"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a CEO , a Board of Director, a Company Director, a Support Agent, a Developer, a Team Leader, a Supervisor, a Childcare Practitioner"></span></p>
       <a href="https://discord.com/users/178484384523878400"> 
         <img src="https://lanyard.cnrad.dev/api/178484384523878400?bg=0f1624&hideBadges=true&theme=light&bg=white">
       </a>
@@ -139,7 +139,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><y class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
+                  <li><y class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                   <li><y class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="taylor@taylorgibbs.dev">taylor@taylorgibbs.dev</a></span></li>
                     <li><y class="bi bi-chevron-right"></i> <strong>CV: </strong> <span><a href="https://taylorgibbs.dev/resume.pdf">https://TaylorGibbs.dev/resume.pdf</a></span></li>
                   <!--<li><span class="activity"><i class="fas fa-circle-notch"></i></span></li>-->
@@ -243,7 +243,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="fa-solid fa-user-tie"></i>
-              <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
               <p>Registered Companies</p>
             </div>
           </div>
@@ -291,16 +291,16 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">45%</i></span>
+              <span class="skill">HTML <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">8%</i></span>
+              <span class="skill">CSS <i class="val">12%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="12" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -312,23 +312,23 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Stripe <i class="val">85%</i></span>
+              <span class="skill">Stripe <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             
             <div class="progress">
-              <span class="skill">TCAdmin <i class="val">55%</i></span>
+              <span class="skill">TCAdmin <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Minecraft Server Hosting <i class="val">85%</i></span>
+              <span class="skill">Minecraft Server Hosting <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -340,9 +340,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Ark: Survival Evolved Server Hosting <i class="val">45%</i></span>
+              <span class="skill">Ark: Survival Evolved Server Hosting <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -375,9 +375,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Project Zomboid Server Hosting <i class="val">10%</i></span>
+              <span class="skill">Project Zomboid Server Hosting <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -396,9 +396,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Terraria Server Hosting <i class="val">25%</i></span>
+              <span class="skill">Terraria Server Hosting <i class="val">45%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -421,9 +421,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">WHMCS <i class="val">85%</i></span>
+              <span class="skill">WHMCS <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -442,9 +442,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">PayPal Business <i class="val">75%</i></span>
+              <span class="skill">PayPal Business <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -463,16 +463,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">7 Days to Die Server Hosting <i class="val">65%</i></span>
+              <span class="skill">7 Days to Die Server Hosting <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Arma 3 Server Hosting <i class="val">70%</i></span>
+              <span class="skill">Arma 3 Server Hosting <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -484,9 +484,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">DayZ Server Hosting <i class="val">70%</i></span>
+              <span class="skill">DayZ Server Hosting <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -505,16 +505,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Rust Server Hosting <i class="val">20%</i></span>
+              <span class="skill">Rust Server Hosting <i class="val">35%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Space Engineers Server Hosting <i class="val">15%</i></span>
+              <span class="skill">Space Engineers Server Hosting <i class="val">20%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -744,7 +744,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Trial Moderator</h4>
+              <h4>Staff</h4>
               <h5>16th July 2023 - Present</h5>
               <p><em>OKIGAMES Oyun ve Yazılım Hizmetleri Ltd Sti, Karşıyaka, Türkiye (Remote)</em></p>
               <a href="https://joinbattlebit.com">Website</a>
