--- a/index.html
+++ b/index.html
@@ -195,31 +195,28 @@
                   <center><a href="purevoice" <button type="button" class="btn btn-outline-danger">Read More</button></a></center>
               </div>
               
-              <div class="col-lg-4 col-md-6 content-item companies" data-aos="fade-up" data-aos-delay="200">
+              <!--<div class="col-lg-4 col-md-6 content-item companies" data-aos="fade-up" data-aos-delay="200">
                 <center><div class="pic"><img src="/assets/img/companies/OmeroLogo.png" class="img-fluid" alt="" style="width:180px;height:180px;"></div>
                   <h4>Omero Bot</h4>
                   <p>Omero Bot is a custom Discord Bot provider. Their bots provide a large amounts of customization including Moderation, Roblox APIs, Verification tools, Welcomer and so much more!</p></center>
                   <br>
                   <center><a href="omerobot" <button type="button" class="btn btn-outline-danger">Read More</button></a></center>
-              </div>
+              </div>-->
 
-              <div class="col-lg-4 col-md-6 content-item companies" data-aos="fade-up" data-aos-delay="300">
+              <div class="col-lg-4 col-md-6 content-item companies" data-aos="fade-up" data-aos-delay="200">
                 <center><div class="pic"><img src="/assets/img/companies/HHLogo.png" class="img-fluid" alt="" style="width:180px;height:180px;"></div>
                   <h4>Host Havoc</h4>
                   <p>Host Havoc is dedicated to providing the best Gameserver Hosting available to community owners and gamers alike! With their quick and easy panels hosting your server is a dream. They also offer VPS, Dedicated, Web Hosting and more!</p></center>
                   <br>
                   <center><a href="hosthavoc" <button type="button" class="btn btn-outline-danger">Read More</button></a></center>
               </div>
-              <center>
-              <div class="col-lg-4 col-md-6 content-item companies" data-aos="fade-up" data-aos-delay="100">
+              <div class="col-lg-4 col-md-6 content-item companies" data-aos="fade-up" data-aos-delay="300">
                 <center><div class="pic"><img src="/assets/img/companies/BBLogo.png" class="img-fluid" alt="" style="width:180px;height:180px;"></div>
                   <h4>BattleBit Remastered</h4>
                   <p>BattleBit Remastered is a low-poly, massive multiplayer FPS, supporting 254 players per server. Battle on a near-fully destructible map with various vehicles!</p></center>
                   <br>
                   <center><a href="battlebit" <button type="button" class="btn btn-outline-danger">Read More</button></a></center>
               </div>
-            </center>
-            </center>
 
              <!-- <div class="col-lg-4 col-md-2 content-item" data-aos="fade-up" data-aos-delay="200">-->
               </div>
