--- a/eclipticgroup.html
+++ b/eclipticgroup.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ecliptic Holdings Group LIMITED | TaylorGibbs.dev</title>
+  <title>Ecliptic Group | TaylorGibbs.dev</title>
   <meta name="description" content="Here you can view a company Taylor currently or formerly worked for. You can find more information regarding responsibilities as well as the conclusion to his time there!">
   <meta content="Taylor, Gibbs, Taylor Gibbs, TaylorGibbsYT, Taylor G., Developer, Website, Building, Making, Fiverr, Freelance, Freelancer, Discord, Email, Heart of Worcestershire College, HOWCollege, Childcare, Teaching, Flyford Flavell, Flyford Flavell Primary School, Teaching Assistant, Development, FiveM, Discord.js, Discord.py, HTML, Modern Solutions, LiveMap, BeamMP, Support, Support Agent, Support Team Lead, VPS, Virtual Private Server, Dedicated Server, Colocation, RocketCAD" name="keywords">
 
@@ -76,7 +76,7 @@
                 <h2>Company Details</h2>
                 <ol>
                   <li><a href="/en/">Home</a></li>
-                  <li>Ecliptic Holdings Group LIMITED</li>
+                  <li>Ecliptic Group</li>
                 </ol>
               </div>
       
@@ -106,22 +106,22 @@
             <div class="portfolio-info">
               <h3>Company Information</h3>
               <ul>
-                <li><strong>Category</strong>: Business Management</li>
-                <li><strong>Name</strong>: Ecliptic Holdings Group LIMITED</li>
+                <li><strong>Category</strong>: Marketing</li>
+                <li><strong>Name</strong>: Ecliptic Group (Ecliptic Solutions Group CIC)</li>
                 <li><strong>Location</strong>: London, England (Remote)</li>
-                <li><strong>Job Title</strong>: Operations Director</li>
+                <li><strong>Job Title</strong>: Vice Chairman</li>
                 <li><strong>Employed Dates</strong>: 2nd April 2022 - Present</li>
-                <li><strong>Website</strong>: <a href="https://eclipticsolutions.ltd.uk">eclipticsolutions.ltd.uk</a></li>
-                <li><strong>Company Registration</strong>: <a href="https://find-and-update.company-information.service.gov.uk/company/13121944">Companies House (GOV.UK)</a></li>
+                <li><strong>Website</strong>: <a href="https://ecliptic.group">ecliptic.group</a></li>
+                <li><strong>Company Registration</strong>: <a href="https://find-and-update.company-information.service.gov.uk/company/15626566">Companies House (GOV.UK)</a></li>
               </ul>
             </div>
           </div>
 
           <div class="col-lg-12">
             <div class="portfolio-description">
-              <h2>About Ecliptic Holdings Group LIMITED</h2>
+              <h2>About Ecliptic Group</h2>
               <p>
-                Ecliptic Group is the parent company of <a href="https://eclipsenetworks.ltd.uk">Eclipse Networks</a>, <a href="https://omerobot.co.uk">Omero Bot</a> and <a href="https://purevoice.uk">PureVoice Communications</a>. They also assist, manage and provide enterprise business solutions to smaller businesses or hosting company's.
+                Ecliptic Group has changed forms over the last few years ranging from Hosting, Discord Bots and even Telecommunications! Ecliptic Group is now a Marketing Agency targeted for charities, CIC's, CIOs and local businesses in the area in Berkshire.
               </p>
             </div>
           </div>
