--- a/webwise.html
+++ b/webwise.html
@@ -116,7 +116,7 @@
                 <li><strong>Name</strong>: WebWise Hosting Ltd.</li>
                 <li><strong>Location</strong>: London, United Kingdom (Remote)</li>
                 <li><strong>Job Title</strong>: Co-Founder & Chief Executive Officer</li>
-                <li><strong>Employed Dates</strong>: 04/05/2023- Present</li>
+                <li><strong>Employed Dates</strong>: 04/05/2023- 14/11/2024</li>
                 <li><strong>Website</strong>: <a href="https://webwise-hosting.co.uk">webwise-hosting.co.uk</a></li>
                 <li><strong>Company Registration</strong>: <a href="https://find-and-update.company-information.service.gov.uk/company/14845906">Companies House (GOV.UK)</a></li>
               </ul>
@@ -127,7 +127,7 @@
             <div class="portfolio-description">
               <h2>About WebWise Hosting</h2>
               <p>
-                WebWise Hosting is a Web Hosting Provider based in the United Kingdom which started in May of 2023. They provide amazing Web Hosting and customer service to all of their clients and are available for any and all questions customers have for them.
+                WebWise Hosting is a Web Hosting Provider based in the United Kingdom which started in May of 2023. They provide amazing Web Hosting and customer service to all of their clients and are available for any and all questions customers have for them.<br>WebWise Hosting closed its doors in November 2024.
               </p>
             </div>
           </div>
