--- a/eclipticsolutions.html
+++ b/eclipticsolutions.html
@@ -3,9 +3,9 @@
     <head>
   		<title>Redirecting...</title>
   			<meta charset="UTF-8" />
-  			<meta http-equiv="refresh" content="3; URL=/eclipticgroup.html" />
+  			<meta http-equiv="refresh" content="3; URL=/eclipticgroup" />
   	</head>
   	<body>
-  		<p>This page has been moved. If you are not redirected within 3 seconds, click <a href="/eclipticgroup.html">here</a> to go to the page manually.</p>
+  		<p>This page has been moved. If you are not redirected within 3 seconds, click <a href="/eclipticgroup">here</a> to go to the page manually.</p>
   	</body>
   </html>
