--- a/battlebit.html
+++ b/battlebit.html
@@ -123,7 +123,7 @@
                 <li><strong>Category</strong>: Game</li>
                 <li><strong>Name</strong>: BattleBit Remastered</li>
                 <li><strong>Location</strong>: Remote</li>
-                <li><strong>Job Title</strong>: Trial Moderator</li>
+                <li><strong>Job Title</strong>: Staff</li>
                 <li><strong>Employed Dates</strong>: 16/07/2023 - Present</li>
                 <li><strong>Website</strong>: <a href="https://joinbattlebit.com/">joinbattlebit.com</a></li>
                 <li><strong>Discord</strong>: <a href="https://discord.com/battlebit">discord.com/battlebit</a></li>
