--- a/hosthavoc.html
+++ b/hosthavoc.html
@@ -103,6 +103,26 @@
                   <img src="/assets/img/companies/havoc-2.png" alt="">
                 </div>
 
+                                <div class="swiper-slide">
+                  <img src="/assets/img/companies/havoc-3.png" alt="">
+                </div>
+
+                                <div class="swiper-slide">
+                  <img src="/assets/img/companies/havoc-4.png" alt="">
+                </div>
+
+                                <div class="swiper-slide">
+                  <img src="/assets/img/companies/havoc-5.png" alt="">
+                </div>
+
+                                <div class="swiper-slide">
+                  <img src="/assets/img/companies/havoc-6.png" alt="">
+                </div>
+
+                                <div class="swiper-slide">
+                  <img src="/assets/img/companies/havoc-7.jpg" alt="">
+                </div>
+
               </div>
               <div class="swiper-pagination2"></div>
             </div>
@@ -116,7 +136,7 @@
                 <li><strong>Name</strong>: Host Havoc Ltd.</li>
                 <li><strong>Location</strong>: Ottawa, Canada (Remote)</li>
                 <li><strong>Job Title</strong>: Support Operations</li>
-                <li><strong>Employed Dates</strong>: 03/08/2022 - Present</li>
+                <li><strong>Employed Dates</strong>: 03/08/2022 - 31/07/2025</li>
                 <li><strong>Website</strong>: <a href="https://hosthavoc.com">hosthavoc.com</a></li>
               </ul>
             </div>
