--- a/modernsolutions.html
+++ b/modernsolutions.html
@@ -89,10 +89,6 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <div class="alert alert-success" role="alert">
-          <center>Looking to receive hosting from Modern Solutions? Use code "SUMMER" for 20% off!</center>
-        </div>
-
         <div class="row gy-4">
 
           <div class="col-lg-8">
@@ -120,7 +116,7 @@
                 <li><strong>Name</strong>: Modern Solutions (Host Havoc Ltd. - Formally ModernCAD, LLC.)</li>
                 <li><strong>Location</strong>: Ottawa, Canada (Remote)</li>
                 <li><strong>Job Title</strong>: Support Operations</li>
-                <li><strong>Employed Dates</strong>: 10th December 2020 - Present</li>
+                <li><strong>Employed Dates</strong>: 10th December 2020 - 31st July 2025</li>
                 <li><strong>Website</strong>: <a href="https://modsol.co/taylor">shopmodernsolutions.com</a></li>
               </ul>
             </div>
