--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <h1>Taylor Gibbs</h1>
       <p>I'm <span class="typed" data-typed-items="a CEO , a Board of Director, a Company Director, a Support Agent, a Developer, a Team Leader, a Supervisor, a Childcare Practitioner"></span></p>
       <a href="https://discord.com/users/178484384523878400"> 
-        <img src="https://lanyard.cnrad.dev/api/178484384523878400?bg=0f1624&hideBadges=true&theme=light&bg=white">
+        <img src="https://lanyard.cnrad.dev/api/178484384523878400?bg=0f1624&hideBadges=true&theme=dark&bg=white">
       </a>
       <div class="social-links">
         <!--<a href="https://twitter.com/TaylorGibbsYT" class="twitter"><i class="fab fa-twitter"></i></a>-->
@@ -316,9 +316,9 @@
             </div>
             
             <div class="progress">
-              <span class="skill">TCAdmin <i class="val">75%</i></span>
+              <span class="skill">TCAdmin <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -446,9 +446,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MultiCraft <i class="val">40%</i></span>
+              <span class="skill">MultiCraft <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -474,9 +474,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Conan Exiles Server Hosting <i class="val">30%</i></span>
+              <span class="skill">Conan Exiles Server Hosting <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -502,16 +502,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Rust Server Hosting <i class="val">55%</i></span>
+              <span class="skill">Rust Server Hosting <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Space Engineers Server Hosting <i class="val">70%</i></span>
+              <span class="skill">Space Engineers Server Hosting <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -524,17 +524,17 @@
 
 
             <div class="progress">
-              <span class="skill">Valheim Server Hosting <i class="val">50%</i></span>
+              <span class="skill">Valheim Server Hosting <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
 
             <div class="progress">
-              <span class="skill">V Rising Server Hosting <i class="val">5%</i></span>
+              <span class="skill">V Rising Server Hosting <i class="val">45%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -691,7 +691,7 @@
             </div>
             <div class="resume-item">
               <h4>Support Operations</h4>
-              <h5>10th December 2020 - Present</h5>
+              <h5>10th December 2020 - 31st July 2025</h5>
               <p><em>Modern Solutions, Ottawa, Canada (Remote)</em></p>
               <a href="https://shopmodernsolutions.com">Website</a>
               <ul>
@@ -707,7 +707,7 @@
             </div>
             <div class="resume-item">
               <h4>Support Operations</h4>
-              <h5>3rd August 2022 - Present</h5>
+              <h5>3rd August 2022 - 31st July 2025</h5>
               <p><em>Host Havoc Ltd., Ottawa, Canada (Remote)</em></p>
               <a href="https://hosthavoc.com">Website</a>
               <ul>
